changes in index.html and style.css

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ input {
   }
 }
 
-@media screen and (min-width: 100px) and (max-width: 400px) {
+@media screen and (max-width: 400px) {
   .screen {
     margin-left: -16px;
     width: 399px;
