--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ input {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   letter-spacing: 1.4px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .background {
@@ -82,7 +82,7 @@ input {
 }
 
 .app-form-control {
-  width: 100%;
+  width: 85%;
   padding: 10px 0;
   background: none;
   border: none;
@@ -110,7 +110,7 @@ input {
   cursor: pointer;
   outline: none;
   text-transform: uppercase;
-  margin: 5px 50px;
+  margin: 5px 0px;
 }
 
 /* .app-form-button:hover {
@@ -134,6 +134,28 @@ input {
   animation-name: p;
   animation-iteration-count: infinite;
   animation-duration: 1s;
+}
+
+.btn {
+  display: flex;
+  max-width: 300px;
+  width: 300px;
+}
+
+.app-form-button:hover {
+  border: 2px white solid;
+  border-radius: 10px;
+}
+.rmvbtn {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin: 0 0 3px 3px;
+}
+
+.rmvbtn:hover {
+  background-color: black;
+  color: white;
 }
 /* Key Frames */
 @keyframes p {
@@ -175,7 +197,7 @@ input {
         min-height: 100%vh;
         } */
   .app-form-button {
-    margin: 5px 90px;
+    margin: 5px 30px;
   }
   .app-form {
     margin-bottom: 20px;
@@ -184,8 +206,18 @@ input {
     font-size: 0.9rem;
     margin-top: -50px;
   }
+  /* .btn {
+    display: flex;
+    width: 100px;
+  } */
 }
 
+@media screen and (max-width: 490px) {
+  .btn {
+    display: flex;
+    flex-direction: column;
+  }
+}
 @media screen and (max-width: 400px) {
   .screen {
     margin-left: -16px;
